--- a/roles/reproxy/files/web/index.html
+++ b/roles/reproxy/files/web/index.html
@@ -17,6 +17,7 @@
     <nav>
         <ul>
             <li><a href="#">Home</a></li>
+            <li><a href="http://argon/">NAS</a></li>
             <li><a href="http://helium/zabbix/">Zabbix</a></li>
             <li><a href="http://helium/grafana/">Grafana</a></li>
             <li><a href="http://neon/gitea/">Gitea</a></li>
