🔗 Add router link to navigation menu
- Include new link to router (10.0.0.1) in web interface navigation

--- a/roles/reproxy/files/web/index.html
+++ b/roles/reproxy/files/web/index.html
@@ -21,6 +21,7 @@
             <li><a href="http://helium/zabbix/">Zabbix</a></li>
             <li><a href="http://helium/grafana/">Grafana</a></li>
             <li><a href="http://neon/gitea/">Gitea</a></li>
+            <li><a href="http://10.0.0.1/">Router</a></li>
         </ul>
     </nav>
 
