🏗️ Update network infrastructure and documentation
- 📊 Add EdgeRouter (krypton) to network diagram in README
- 📝 Update inventory with new 'routers' group including krypton
- 🌐 Add krypton DNS record to PowerDNS zone file
- 🔗 Add EdgeRouter link to the homepage

--- a/roles/reproxy/files/web/index.html
+++ b/roles/reproxy/files/web/index.html
@@ -23,6 +23,7 @@
                 <li><a class="frame" href="http://helium/grafana/">Grafana</a></li>
                 <li><a class="frame" href="http://neon/gitea/">Gitea</a></li>
                 <li><a class="frame" href="http://10.0.0.1/">Router</a></li>
+                <li><a class="frame" href="http://krypton/">EdgeRouter</a></li>
                 <li><a class="frame" href="/homeland.html">Homeland</a></li>
             </ul>
         </nav>
