🦙 Add ollama role and link to chat in reproxy

--- a/roles/reproxy/files/web/index.html
+++ b/roles/reproxy/files/web/index.html
@@ -19,6 +19,7 @@
             <ul>
                 <li><a class="frame" href="#">Home</a></li>
                 <li><a class="frame" href="http://argon/">NAS</a></li>
+                <li><a class="frame" href="http://helium/chat/">Chat</a></li>
                 <li><a class="frame" href="http://helium/zabbix/">Zabbix</a></li>
                 <li><a class="frame" href="http://helium/grafana/">Grafana</a></li>
                 <li><a class="frame" href="http://neon/gitea/">Gitea</a></li>
