--- a/roles/reproxy/files/web/index.html
+++ b/roles/reproxy/files/web/index.html
@@ -20,6 +20,7 @@
                 <li><a class="frame" href="#">Home</a></li>
                 <li><a class="frame" href="http://argon/">NAS</a></li>
                 <li><a class="frame" href="http://helium/chat/">Chat</a></li>
+                <li><a class="frame" href="http://helium/adguard/">AdGuard</a></li>
                 <li><a class="frame" href="http://helium/zabbix/">Zabbix</a></li>
                 <li><a class="frame" href="http://helium/grafana/">Grafana</a></li>
                 <li><a class="frame" href="http://neon/gitea/">Gitea</a></li>
