📱 Improve page for mobile screens
Co-authored-by: Sobaka-Pavlova <aleksandr.balaba12@gmail.com>

--- a/roles/reproxy/files/web/index.html
+++ b/roles/reproxy/files/web/index.html
@@ -17,17 +17,17 @@
   <main>
     <nav class="overhead">
       <ul>
-        <li><a class="frame" href="#">Home</a></li>
-        <li><a class="frame" href="http://argon/">NAS</a></li>
-        <li><a class="frame" href="http://helium/chat/">Chat</a></li>
-        <li><a class="frame" href="http://ha.home/">Home Assistant</a></li>
-        <li><a class="frame" href="http://helium/adguard/">AdGuard</a></li>
-        <li><a class="frame" href="http://helium/zabbix/">Zabbix</a></li>
-        <li><a class="frame" href="http://helium/grafana/">Grafana</a></li>
-        <li><a class="frame" href="http://neon/gitea/">Gitea</a></li>
-        <li><a class="frame" href="http://10.0.0.1/">Router</a></li>
-        <li><a class="frame" href="http://krypton/">EdgeRouter</a></li>
-        <li><a class="frame" href="/homeland.html">Homeland</a></li>
+        <li class="frame"><a href="#">Home</a></li>
+        <li class="frame"><a href="http://argon/">NAS</a></li>
+        <li class="frame"><a href="http://helium/chat/">Chat</a></li>
+        <li class="frame"><a href="http://ha.home/">Home Assistant</a></li>
+        <li class="frame"><a href="http://helium/adguard/">AdGuard</a></li>
+        <li class="frame"><a href="http://helium/zabbix/">Zabbix</a></li>
+        <li class="frame"><a href="http://helium/grafana/">Grafana</a></li>
+        <li class="frame"><a href="http://neon/gitea/">Gitea</a></li>
+        <li class="frame"><a href="http://10.0.0.1/">Router</a></li>
+        <li class="frame"><a href="http://krypton/">EdgeRouter</a></li>
+        <li class="frame"><a href="/homeland.html">Homeland</a></li>
       </ul>
     </nav>
 
