✏️ Remove unnecessary preposition "to" from "Go to Home"

--- a/roles/reproxy/files/web/homeland.html
+++ b/roles/reproxy/files/web/homeland.html
@@ -32,7 +32,7 @@
       ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
     </pre>
     <div class="centered-button-container">
-      <a href="/" class="home-button">Go to Home</a>
+      <a href="/" class="home-button">Go Home</a>
     </div>
   </main>
 
