♻️ Refactor UI elements
- ♻️ Replace "frame" class with "button" class
- ♻️ Add box-shadow to "homeland" and "server-stats"

--- a/roles/reproxy/files/web/index.html
+++ b/roles/reproxy/files/web/index.html
@@ -17,22 +17,22 @@
   <main>
     <nav class="overhead">
       <ul>
-        <li class="frame"><a href="#">Home</a></li>
-        <li class="frame"><a href="http://argon/">NAS</a></li>
-        <li class="frame"><a href="http://helium/chat/">Chat</a></li>
-        <li class="frame"><a href="http://ha.home/">Home Assistant</a></li>
-        <li class="frame"><a href="http://helium/adguard/">AdGuard</a></li>
-        <li class="frame"><a href="http://helium/zabbix/">Zabbix</a></li>
-        <li class="frame"><a href="http://helium/grafana/">Grafana</a></li>
-        <li class="frame"><a href="http://neon/gitea/">Gitea</a></li>
-        <li class="frame"><a href="http://10.0.0.1/">Router</a></li>
-        <li class="frame"><a href="http://krypton/">EdgeRouter</a></li>
-        <li class="frame"><a href="/homeland.html">Homeland</a></li>
+        <li class="button button-nav"><a href="#">Home</a></li>
+        <li class="button button-nav"><a href="http://argon/">NAS</a></li>
+        <li class="button button-nav"><a href="http://helium/chat/">Chat</a></li>
+        <li class="button button-nav"><a href="http://ha.home/">Home Assistant</a></li>
+        <li class="button button-nav"><a href="http://helium/adguard/">AdGuard</a></li>
+        <li class="button button-nav"><a href="http://helium/zabbix/">Zabbix</a></li>
+        <li class="button button-nav"><a href="http://helium/grafana/">Grafana</a></li>
+        <li class="button button-nav"><a href="http://neon/gitea/">Gitea</a></li>
+        <li class="button button-nav"><a href="http://10.0.0.1/">Router</a></li>
+        <li class="button button-nav"><a href="http://krypton/">EdgeRouter</a></li>
+        <li class="button button-nav"><a href="/homeland.html">Homeland</a></li>
       </ul>
     </nav>
 
     <div class="server-stats-container overfoot">
-      <div class="server-stats frame">
+      <div class="server-stats">
         <h1 id="helium-hostname">helium</h1>
         <div class="stats-container">
           <div> CPU: <span id="helium-cpu-percent"></span></div>
@@ -41,7 +41,7 @@
           <div> Load Average: <span id="helium-load-average-one"></span>/<span id="helium-load-average-five"></span>/<span id="helium-load-average-fifteen"></span></div>
         </div>
       </div>
-      <div class="server-stats frame">
+      <div class="server-stats">
         <h1 id="neon-hostname">neon</h1>
         <div class="stats-container">
           <div> CPU: <span id="neon-cpu-percent"></span></div>
