--- a/roles/reproxy/files/web/homeland.html
+++ b/roles/reproxy/files/web/homeland.html
@@ -14,7 +14,7 @@
   </header>
 
   <main>
-    <pre class="homeland overhead frame">
+    <pre class="homeland overhead">
       ⡀⢀⣀⣤⣤⣀⣰⣤⣶⣄⡀⠠⣶⡄⠻⢿⣿⣷⣿⣿⣾⣷⣴⡷⣶⣶⣿⣿⣿⣻⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
       ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣾⣿⡇⠀⠀⠙⠏⢛⣿⠻⢿⣇⣱⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
       ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⢿⠛⠀⠀⠀⠀⠁⠀⢼⠻⣷⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
@@ -32,7 +32,7 @@
       ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
     </pre>
     <div class="centered-button-container">
-      <a href="/" class="home-button">Go Home</a>
+      <div class="button"><a href="/">Go Home</a></div>
     </div>
   </main>
 
