--- a/roles/reproxy/files/web/index.html
+++ b/roles/reproxy/files/web/index.html
@@ -37,6 +37,7 @@
         <div class="stats-container">
           <div> CPU: <span id="helium-cpu-percent"></span></div>
           <div> Memory: <span id="helium-mem-percent"></span></div>
+          <div> Disk: <span id="helium-disk-percent"></span></div>
           <div> Uptime: <span id="helium-uptime"></span></div>
           <div> Load Average: <span id="helium-load-average-one"></span>/<span id="helium-load-average-five"></span>/<span id="helium-load-average-fifteen"></span></div>
         </div>
@@ -46,6 +47,7 @@
         <div class="stats-container">
           <div> CPU: <span id="neon-cpu-percent"></span></div>
           <div> Memory: <span id="neon-mem-percent"></span></div>
+          <div> Disk: <span id="neon-disk-percent"></span></div>
           <div> Uptime: <span id="neon-uptime"></span></div>
           <div> Load Average: <span id="neon-load-average-one"></span>/<span id="neon-load-average-five"></span>/<span id="neon-load-average-fifteen"></span></div>
         </div>
