✨ Add dufs file sharing service. Add link to homepage

--- a/roles/reproxy/files/web/index.html
+++ b/roles/reproxy/files/web/index.html
@@ -25,6 +25,7 @@
         <li class="button button-nav"><a href="http://helium/zabbix/">Zabbix</a></li>
         <li class="button button-nav"><a href="http://helium/grafana/">Grafana</a></li>
         <li class="button button-nav"><a href="http://neon/gitea/">Gitea</a></li>
+        <li class="button button-nav"><a href="http://helium/share/">Share</a></li>
         <li class="button button-nav"><a href="http://10.0.0.1/">Router</a></li>
         <li class="button button-nav"><a href="http://krypton/">EdgeRouter</a></li>
         <li class="button button-nav"><a href="/homeland.html">Homeland</a></li>
