✨ Add xenon cloud server to infrastructure
- 🌐 Configure cloud network with VPN access
- 🖥️ Add server monitoring to dashboard
- 📝 Update network topology documentation
- 🔧 Configure netplan for cloud interface

--- a/roles/reproxy/files/web/index.html
+++ b/roles/reproxy/files/web/index.html
@@ -53,6 +53,16 @@
           <div> Load Average: <span id="neon-load-average-one"></span>/<span id="neon-load-average-five"></span>/<span id="neon-load-average-fifteen"></span></div>
         </div>
       </div>
+      <div class="server-stats">
+        <h1 id="xenon-hostname">xenon</h1>
+        <div class="stats-container">
+          <div> CPU: <span id="xenon-cpu-percent"></span></div>
+          <div> Memory: <span id="xenon-mem-percent"></span></div>
+          <div> Disk: <span id="xenon-disk-percent"></span></div>
+          <div> Uptime: <span id="xenon-uptime"></span></div>
+          <div> Load Average: <span id="xenon-load-average-one"></span>/<span id="xenon-load-average-five"></span>/<span id="xenon-load-average-fifteen"></span></div>
+        </div>
+      </div>
     </div>
   </main>
 
